<resources>
    <string name="app_name">My Doctor</string>
    <string name="password">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="phone">Telefone</string>
    <string name="update_profile_label">Atualizar perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
</resources>
