<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/register_first_name_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/register_last_name_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/register_email_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/e_mail" />

    <EditText
        android:id="@+id/register_phone_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/register_password_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="123456"
        android:gravity="center"
        android:hint="@string/password"/>

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="register"/>


    </RelativeLayout>

    
</LinearLayout>